--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@
     --small: 0.875rem;
 }
 
-h1, h2, h3, h4, p, h6 { margin: 0; text-decoration: none;}
+h1, h2, h3, h4, p, h6 { margin: 0; padding: 0; text-decoration: none;}
 h1 { font-size: 3rem; line-height: 1}
 h2 { font-size: 2rem;}
 h3 { font-size: 1.5rem;}
@@ -48,7 +48,7 @@ body {
     background-color: var(--dshade);
     color: var(--font);
     overflow-x: hidden;
-    line-height: 1.4;
+    line-height: 1.5;
     font-size: 1rem;
 }
 
@@ -57,13 +57,15 @@ button {outline: 0; padding: 0; border: 2px solid transparent; background-color:
 a { text-decoration: none; cursor: pointer}
 a:hover { text-decoration: underline; }
 a:visited { color: inherit }
+img { user-select: none;}
 
 .flex { display: flex; }
 .gapHMS { display: flex; gap: var(--midSpacing);}
 .overflowhidden { overflow: hidden; }
 .button-pad { padding-left: var(--topSpacing); padding-right: var(--topSpacing);}
 .space-between { display: flex; justify-content: space-between;}
-.hor-scroll {
+.relative { position: relative; }
+/* .hor-scroll {
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
@@ -74,7 +76,7 @@ a:visited { color: inherit }
     white-space: normal;
     margin: 5px 0;
     border-radius: 5px;
-}
+} */
 
 .icon {
     width: 32px;
